[package]
name = "groth"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "groth"

[features]
no-entrypoint = []
# no-idl = []
idl-build = ["anchor-lang/idl-build"]
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
groth16-solana = "0.1.0"
solana-bn254 = "2.2.2"
ark-bn254 = "0.5"
ark-serialize = "0.5"